[package]
name = "yamux"
version = "0.13.7"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0 OR MIT"
description = "Multiplexer over reliable, ordered connections"
keywords = ["network", "protocol"]
categories = ["network-programming"]
repository = "https://github.com/paritytech/yamux"
edition = "2021"

[dependencies]
futures = { version = "0.3.12", default-features = false, features = ["std", "executor"] }
log = "0.4.8"
nohash-hasher = "0.2"
parking_lot = "0.12"
rand = "0.9.0"
static_assertions = "1"
pin-project = "1.1.0"
web-time = "1.1.0"

[dev-dependencies]
futures = { version = "0.3.12", default-features = false, features = ["executor"] }
quickcheck = { package = "quickcheck-ext", path = "../quickcheck-ext" }
