[package]
name = "yamux"
version = "0.14.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0 OR MIT"
description = "Multiplexer over reliable, ordered connections"
keywords = ["network", "protocol"]
categories = ["network-programming"]
repository = "https://github.com/paritytech/yamux"
edition = "2021"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
log = "0.4"
nohash-hasher = "0.2"
parking_lot = "0.12"
static_assertions = "1"
pin-project = "1"
web-time = "1"

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["executor"] }
quickcheck = { package = "quickcheck-ext", path = "../quickcheck-ext" }
rand = { version = "0.10", default-features = false, features = ["std", "std_rng", "thread_rng"] }
